# SPME

./: .gitmodules  CMakeLists.txt  Readme.md
FileStructures/: SPME_Map  TPL
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: PCH.h  defines.h
include/Commands/: CommandType.h  LZSSCommands.h  MapCommands.h  TPLCommands.h  U8Commands.h  debug_commands.h  lzss_commands.h  map_commands.h
include/Commands/Display/: Display.h  PreviewMesh.h  PreviewObject.h  PreviewTexture.h  Shader.h  ShaderProgram.h  VertexAttribute.h
include/Compressors/: LZSS.h
include/FileTypes/: LevelData.h  MapConfig.h  TPL.h  U8Archive.h  U8File.h
include/FileTypes/LevelGeometry/: GeometryExporter.h  InternalMapFile.h  LevelGeometry.h  MapStructures.h
include/IO/: FileHandle.h  FileReader.h  FileWriter.h
include/Types/: Types.h
include/UnitTests/: LZSSTests.h
include/Utility/: Logging.h  SPMEAssert.h
include/core/: filesystem.h  logging.h  str2int.h
src/: PCH.h  StbImpl.cpp  main.cpp  test.cpp
src/Commands/: LZSSCommands.cpp  MapCommands.cpp  TPLCommands.cpp  U8Commands.cpp  debug_commands.c  debug_commands.cpp  lzss_commands.c  map_commands.cpp
src/Commands/Display/: Display.cpp  PreviewMesh.cpp  PreviewObject.cpp  PreviewTexture.cpp  Shader.cpp  ShaderProgram.cpp  VertexAttribute.cpp
src/Compressors/: LZSS.cpp  LZSS.h
src/FileTypes/: LevelData.cpp  LevelData.h  MapConfig.cpp  TPL.cpp  TPL.h  U8Archive.cpp  U8Archive.h  U8File.cpp
src/FileTypes/LevelGeometry/: GeometryExporter.cpp  GeometryExporter.h  InternalMapFile.h  LevelGeometry.cpp  LevelGeometry.h
src/IO/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/UnitTests/: LZSSTesting.cpp
src/Utility/: Logging.cpp  Logging.h  SPMEAssert.h
src/core/: Logging.cpp  filesystem.cpp
